Удалил лишние папки

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,5 +1,5 @@
 window#waybar {
-    background: #2e3440; /* rgba(0, 0, 0, 0); #11111b; */
+    background: rgba(0, 0, 0, 0);
     font-family: "Jetbrains Mono";
     font-size: 16px;
     color: #e5e9f0;
